plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id("org.openrewrite.rewrite") version("latest.release")
}

group = 'com.wealth'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2025.1.1")
}

dependencies {
    rewrite("org.openrewrite.recipe:rewrite-spring:6.28.2")

    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
}

rewrite {
    activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
    setExportDatatables(true)
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "org.testcontainers:testcontainers-bom:2.0.4" // Or your latest version
        }
        // Jackson 2.x pins removed — Spring Boot 4 manages Jackson 3 (tools.jackson) via its BOM.
        // Pinning com.fasterxml.jackson 2.x here caused Jackson 3 class initialization failures.
    }

    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.boot:spring-boot-testcontainers'
        testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    }

    // --- NEW: Test Task Configurations ---

    // Keep JVM timezone explicit to avoid PostgreSQL rejecting Asia/Calcutta from host defaults.
    tasks.withType(Test).configureEach {
        jvmArgs '-Duser.timezone=Asia/Kolkata'
    }

    tasks.matching { it.name == 'bootRun' }.configureEach {
        jvmArgs '-Duser.timezone=Asia/Kolkata'
    }

    // 1. Configure the standard 'test' task to run fast (ignore integration tags)
    tasks.named('test', Test) {
        useJUnitPlatform {
            excludeTags 'integration'
        }
    }

    // 2. Create the custom 'integrationTest' task for heavy DB/Testcontainers tests
    tasks.register('integrationTest', Test) {
        description = 'Runs integration tests (Testcontainers, DB, etc.)'
        group = 'verification'

        useJUnitPlatform {
            includeTags 'integration'
        }

        // Ensure standard fast tests run before the heavy integration tests
        shouldRunAfter tasks.named('test')
    }

    // 3. Ensure 'integrationTest' runs automatically when you run a full build/check
    tasks.named('check') {
        dependsOn tasks.named('integrationTest')
    }
}
tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
